tests/paczka1/small_fuzzy/85561066.err
Error in line 3: mr59sq S983 66,0
Error in line 14: 94qxDNy A220 55,7
